2010-05-21  Ivan Maidanski <ivmai@mail.ru> (really Bradley Smith and
                                            Stefano Rivera)

	* mach_dep.c (NO_GETCONTEXT): Also define if AVR32.
	* include/private/gcconfig.h (AVR32): New macro (also define the
	supplementary macros for the target).
	* include/private/thread_local_alloc (USE_COMPILER_TLS): Don't
	define for AVR32.

2010-05-13  Ivan Maidanski <ivmai@mail.ru> (mostly really Uros Bizjak)

	* tests/leak_test.c (main): Explicitly define as returning int
	(to prevent a spurious test failure on some Linux/alpha targets).
	* tests/thread_leak_test.c (main): Ditto.
	* tests/thread_leak_test.c: Initialize GC_find_leak in the main
	thread (before GC_INIT) only.
	* tests/leak_test.c (main): Use GC_set_find_leak() instead of
	accessing GC_find_leak directly.
	* tests/thread_leak_test.c (main): Ditto.

2010-05-05  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h (GC_find_leak, GC_finalize_on_demand,
	GC_java_finalization, GC_dont_expand, GC_no_dls,
	GC_dont_precollect): Simplify the comment (remove the information
	about data races since the value is boolean).

2010-04-16  Ivan Maidanski <ivmai@mail.ru> (mostly really Louis Zhuang)

	* os_dep.c (GC_get_stack_base, GC_get_main_stack_base): New
	Solaris-specific implementation (based on thr_stksegment).
	* os_dep.c (stackbase_main_self, stackbase_main_ss_sp): New static
	variable used by the Solaris-specific GC_get_stack_base().

2010-04-16  Ivan Maidanski <ivmai@mail.ru> (mostly really NIIBE Yutaka)

	* pthread_support.c (GC_mark_thread_local_free_lists,
	GC_check_tls): Mark (and check) only for live threads (in case of
	GC_destroy_thread_local() is called already but GC_delete_thread()
	is not yet).
	* win32_threads.c (GC_mark_thread_local_free_lists, GC_check_tls):
	Ditto (matters only if GC_PTHREADS defined).

2010-04-09  Ivan Maidanski <ivmai@mail.ru>

	* NT_MAKEFILE: Remove the comment about DLL and Win32S.
	* NT_STATIC_THREADS_MAKEFILE: Ditto.