@@ -1,5 +1,4 @@
 # 
-# 
 # THIS MATERIAL IS PROVIDED AS IS, WITH ABSOLUTELY NO WARRANTY EXPRESSED
 # OR IMPLIED.  ANY USE IS AT YOUR OWN RISK.
 # 
@@ -26,6 +25,7 @@ dist_pkgdata_DATA = \
 	doc/README.arm.cross \
 	doc/README.autoconf \
 	doc/README.changes \
+	doc/README.cmake \
 	doc/README.contributors \
 	doc/README.cords \
 	doc/README.DGUX386 \
@@ -52,4 +52,3 @@ dist_pkgdata_DATA = \
 	doc/README.darwin \
 	doc/simple_example.html \
 	doc/porting.html
-
