@@ -1,3 +1,9 @@
+2010-05-22  Ivan Maidanski <ivmai@mail.ru>
+
+	* Makefile.am (EXTRA_DIST): Add "CMakeLists.txt" and
+	"tests/CMakeLists.txt".
+	* doc/doc.am (dist_pkgdata_DATA): Add "doc/README.cmake".
+
 2010-05-21  Ivan Maidanski <ivmai@mail.ru> (really Bradley Smith and
                                             Stefano Rivera)
 
